--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "nodemailer": "^6.5.0",
     "reflect-metadata": "^0.1.13",
     "uuid": "^8.3.2"
   },
@@ -21,6 +22,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/nodemailer": "^6.4.1",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.0",
     "jest": "^26.6.3",
